--- a/src/ng2-datepicker/ng2-datepicker.component.html
+++ b/src/ng2-datepicker/ng2-datepicker.component.html
@@ -1,7 +1,6 @@
 <div class="datepicker-container u-is-unselectable">
   <div class="datepicker-input-container">
-    <input type="text" required pattern="(?:19|20)[0-9]{2}-(?:(?:0[1-9]|1[0-2])-(?:0[1-9]|1[0-9]|2[0-9])|(?:(?!02)(?:0[1-9]|1[0-2])-(?:30))|(?:(?:0[13578]|1[02])-31))
-" class="datepicker-input" [(ngModel)]="date.formatted">
+    <input type="text" class="datepicker-input" [ngModel]="date.formatted" (ngModelChange)="inputChange($event)">
     <div class="datepicker-input-icon" (click)="toggle()">
       <i>
         <svg width="58px" height="58px" viewBox="0 0 58 58" version="1.1">
