--- a/src/ng2-datepicker/ng2-datepicker.component.html
+++ b/src/ng2-datepicker/ng2-datepicker.component.html
@@ -40,7 +40,7 @@
     </div>
   </div>
   <div class="datepicker-calendar" *ngIf="opened">
-    <div class="datepicker-calendar-top">
+    <div class="datepicker-calendar-top {{options.color}}">
       <span class="year-title">{{ currentDate.format('YYYY') }}</span>
       <button type="button" (click)="openYearPicker()" *ngIf="!yearPicker">
         {{options.selectYearText}}
@@ -57,9 +57,9 @@
       <div *ngIf="!yearPicker">
         <div class="datepicker-calendar-month-section">
           <i (click)="prevMonth()">
-            <svg width="190px" height="306px" viewBox="58 0 190 306" version="1.1">
+            <svg width="190px" height="306px" viewBox="58 0 190 306" version="1.1" class="fill-{{options.color}}">
               <g id="keyboard-left-arrow-button" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" transform="translate(58.000000, 0.000000)">
-                <g id="chevron-left" fill-rule="nonzero" fill="#000000">
+                <g id="chevron-left" fill-rule="nonzero" fill="#000000" class="fill-{{options.color}}">
                   <polygon id="Shape" points="189.35 35.7 153.65 0 0.65 153 153.65 306 189.35 270.3 72.05 153"></polygon>
                 </g>
               </g>
@@ -67,7 +67,7 @@
           </i>
           <span class="month-title">{{ currentDate.format('MMMM') }}</span>
           <i (click)="nextMonth()">
-            <svg width="190px" height="306px" viewBox="58 0 190 306" version="1.1">
+            <svg width="190px" height="306px" viewBox="58 0 190 306" version="1.1" class="fill-{{options.color}}">
               <g id="keyboard-right-arrow-button" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" transform="translate(58.000000, 0.000000)">
                 <g id="chevron-right" fill-rule="nonzero" fill="#000000">
                   <polygon id="Shape" points="36.35 0 0.65 35.7 117.95 153 0.65 270.3 36.35 306 189.35 153"></polygon>
@@ -88,13 +88,13 @@
         <div class="datepicker-calendar-days-container">
           <span class="day" *ngFor="let d of days; let i = index"
                             (click)="selectDate($event, d.momentObj)"
-                            [ngClass]="{ 'disabled': !d.enabled, 'today': d.today, 'selected': d.selected }">
+                            [ngClass]="{ 'disabled': !d.enabled, 'today label-' + options.color: d.today, 'selected' + options.color: d.selected }">
             {{ d.day }}
           </span>
         </div>
         <div class="datepicker-buttons" *ngIf="!options.autoApply">
-          <button type="button" class="a-button u-is-secondary u-is-small" (click)="clear()">{{options.clearText}}</button>
-          <button type="button" class="a-button u-is-primary u-is-small" (click)="today()">{{options.todayText}}</button>
+          <button type="button" class="a-button u-is-secondary u-is-small button-{{options.color}}" (click)="clear()">{{options.clearText}}</button>
+          <button type="button" class="a-button u-is-primary u-is-small button-{{options.color}}" (click)="today()">{{options.todayText}}</button>
         </div>
       </div>
       <div *ngIf="yearPicker">
