--- a/src/ng2-datepicker/ng2-datepicker.component.html
+++ b/src/ng2-datepicker/ng2-datepicker.component.html
@@ -59,7 +59,7 @@
           <i (click)="prevMonth()" class="fill-{{options.color}}">
             <svg width="190px" height="306px" viewBox="58 0 190 306" version="1.1">
               <g id="keyboard-left-arrow-button" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" transform="translate(58.000000, 0.000000)">
-                <g id="chevron-left" fill-rule="nonzero" fill="#000000" class="fill-{{options.color}}">
+                <g id="chevron-left" fill-rule="nonzero" fill="#000000">
                   <polygon id="Shape" points="189.35 35.7 153.65 0 0.65 153 153.65 306 189.35 270.3 72.05 153"></polygon>
                 </g>
               </g>
