Add !important to all values in palette.scss

--- a/src/ng2-datepicker/palette.scss
+++ b/src/ng2-datepicker/palette.scss
@@ -10,169 +10,169 @@ $clr-background: #ddd;
 $clr-background-main: #ffffff;
 
 .red {
-  background-color: $clr-primary-red;
+  background-color: $clr-primary-red !important;
 }
 
 .green {
-  background-color: $clr-primary-green;
+  background-color: $clr-primary-green !important;
 }
 
 .blue {
-  background-color: $clr-primary-blue;
+  background-color: $clr-primary-blue !important;
 }
 
 .orange {
-  background-color: $clr-primary-orange;
+  background-color: $clr-primary-orange !important;
 }
 
 .violet {
-  background-color: $clr-primary-violet;
+  background-color: $clr-primary-violet !important;
 }
 
 .pink {
-  background-color: $clr-primary-pink;
+  background-color: $clr-primary-pink !important;
 }
 
 .darkgreen {
-  background-color: $clr-primary-darkgreen;
+  background-color: $clr-primary-darkgreen !important;
 }
 
 .darkblue {
-  background-color: $clr-primary-darkblue;
+  background-color: $clr-primary-darkblue !important;
 }
 
 .border-red {
-  background-color: $clr-primary-red;
+  background-color: $clr-primary-red !important;
 }
 
 .border-green {
-  background-color: $clr-primary-green;
+  background-color: $clr-primary-green !important;
 }
 
 .border-blue {
-  background-color: $clr-primary-blue;
+  background-color: $clr-primary-blue !important;
 }
 
 .border-orange {
-  background-color: $clr-primary-orange;
+  background-color: $clr-primary-orange !important;
 }
 
 .border-violet {
-  background-color: $clr-primary-violet;
+  background-color: $clr-primary-violet !important;
 }
 
 .border-pink {
-  background-color: $clr-primary-pink;
+  background-color: $clr-primary-pink !important;
 }
 
 .border-darkgreen {
-  background-color: $clr-primary-darkgreen;
+  background-color: $clr-primary-darkgreen !important;
 }
 
 .border-darkblue {
-  background-color: $clr-primary-darkblue;
+  background-color: $clr-primary-darkblue !important;
 }
 
 .label-red {
-  color: $clr-primary-red;
+  color: $clr-primary-red !important;
 }
 
 .label-green {
-  color: $clr-primary-green;
+  color: $clr-primary-green !important;
 }
 
 .label-blue {
-  color: $clr-primary-blue;
+  color: $clr-primary-blue !important;
 }
 
 .label-orange {
-  color: $clr-primary-orange;
+  color: $clr-primary-orange !important;
 }
 
 .label-violet {
-  color: $clr-primary-violet;
+  color: $clr-primary-violet !important;
 }
 
 .label-pink {
-  color: $clr-primary-pink;
+  color: $clr-primary-pink !important;
 }
 
 .label-darkgreen {
-  color: $clr-primary-darkgreen;
+  color: $clr-primary-darkgreen !important;
 }
 
 .label-darkblue {
-  color: $clr-primary-darkblue;
+  color: $clr-primary-darkblue !important;
 }
 
 .button-red {
-  background-color: $clr-primary-red;
-  color: white;
+  background-color: $clr-primary-red !important;
+  color: white !important;
 }
 
 .button-green {
-  background-color: $clr-primary-green;
-  color: white;
+  background-color: $clr-primary-green !important;
+  color: white !important;
 }
 
 .button-blue {
-  background-color: $clr-primary-blue;
-  color: white;
+  background-color: $clr-primary-blue !important;
+  color: white !important;
 }
 
 .button-orange {
-  background-color: $clr-primary-orange;
-  color: white;
+  background-color: $clr-primary-orange !important;
+  color: white !important;
 }
 
 .button-violet {
-  background-color: $clr-primary-violet;
-  color: white;
+  background-color: $clr-primary-violet !important;
+  color: white !important;
 }
 
 .button-pink {
-  background-color: $clr-primary-pink;
-  color: white;
+  background-color: $clr-primary-pink !important;
+  color: white !important;
 }
 
 .button-darkgreen {
-  background-color: $clr-primary-darkgreen;
-  color: white;
+  background-color: $clr-primary-darkgreen !important;
+  color: white !important;
 }
 
 .button-darkblue {
-  background-color: $clr-primary-darkblue;
-  color: white;
+  background-color: $clr-primary-darkblue !important;
+  color: white !important;
 }
 
 .fill-red {
-  fill: $clr-primary-red;
+  fill: $clr-primary-red !important;
 }
 
 .fill-green {
-  fill: $clr-primary-green;
+  fill: $clr-primary-green !important;
 }
 
 .fill-blue {
-  fill: $clr-primary-blue;
+  fill: $clr-primary-blue !important;
 }
 
 .fill-orange {
-  fill: $clr-primary-orange;
+  fill: $clr-primary-orange !important;
 }
 
 .fill-violet {
-  fill: $clr-primary-violet;
+  fill: $clr-primary-violet !important;
 }
 
 .fill-pink {
-  fill: $clr-primary-pink;
+  fill: $clr-primary-pink !important;
 }
 
 .fill-darkgreen {
-  fill: $clr-primary-darkgreen;
+  fill: $clr-primary-darkgreen !important;
 }
 
 .fill-darkblue {
-  fill: $clr-primary-darkblue;
+  fill: $clr-primary-darkblue !important;
 }
