Add even more !important

--- a/src/ng2-datepicker/palette.scss
+++ b/src/ng2-datepicker/palette.scss
@@ -1,13 +1,13 @@
-$clr-primary-red: #be1e3c;
-$clr-primary-green: #89a400;
-$clr-primary-blue: #0080b4;
-$clr-primary-orange: #fa6e00;
-$clr-primary-violet: #760076;
-$clr-primary-pink: #cc0099;
-$clr-primary-darkgreen: #007156;
-$clr-primary-darkblue: #005374;
-$clr-background: #ddd;
-$clr-background-main: #ffffff;
+$clr-primary-red: #be1e3c !important;
+$clr-primary-green: #89a400 !important;
+$clr-primary-blue: #0080b4 !important;
+$clr-primary-orange: #fa6e00 !important;
+$clr-primary-violet: #760076 !important;
+$clr-primary-pink: #cc0099 !important;
+$clr-primary-darkgreen: #007156 !important;
+$clr-primary-darkblue: #005374 !important;
+$clr-background: #ddd !important;
+$clr-background-main: #ffffff !important;
 
 .red {
   background-color: $clr-primary-red !important;
