--- a/src/ng2-datepicker/palette.scss
+++ b/src/ng2-datepicker/palette.scss
@@ -147,32 +147,104 @@ $clr-background-main: #ffffff !important;
 
 .fill-red {
   fill: $clr-primary-red !important;
+  svg {
+    fill: $clr-primary-red !important;
+    g {
+      fill: $clr-primary-red !important;
+      g {
+        fill: $clr-primary-red !important;
+      }
+    }
+  }
 }
 
 .fill-green {
   fill: $clr-primary-green !important;
+  svg {
+    fill: $clr-primary-green !important;
+    g {
+      fill: $clr-primary-green !important;
+      g {
+        fill: $clr-primary-green !important;
+      }
+    }
+  }
 }
 
 .fill-blue {
   fill: $clr-primary-blue !important;
+  svg {
+    fill: $clr-primary-blue !important;
+    g {
+      fill: $clr-primary-blue !important;
+      g {
+        fill: $clr-primary-blue !important;
+      }
+    }
+  }
 }
 
 .fill-orange {
   fill: $clr-primary-orange !important;
+  svg {
+    fill: $clr-primary-orange !important;
+    g {
+      fill: $clr-primary-orange !important;
+      g {
+        fill: $clr-primary-orange !important;
+      }
+    }
+  }
 }
 
 .fill-violet {
   fill: $clr-primary-violet !important;
+  svg {
+    fill: $clr-primary-violet !important;
+    g {
+      fill: $clr-primary-violet !important;
+      g {
+        fill: $clr-primary-violet !important;
+      }
+    }
+  }
 }
 
 .fill-pink {
   fill: $clr-primary-pink !important;
+  svg {
+    fill: $clr-primary-pink !important;
+    g {
+      fill: $clr-primary-pink !important;
+      g {
+        fill: $clr-primary-pink !important;
+      }
+    }
+  }
 }
 
 .fill-darkgreen {
   fill: $clr-primary-darkgreen !important;
+  svg {
+    fill: $clr-primary-darkgreen !important;
+    g {
+      fill: $clr-primary-darkgreen !important;
+      g {
+        fill: $clr-primary-darkgreen !important;
+      }
+    }
+  }
 }
 
 .fill-darkblue {
   fill: $clr-primary-darkblue !important;
+  svg {
+    fill: $clr-primary-darkblue !important;
+    g {
+      fill: $clr-primary-darkblue !important;
+      g {
+        fill: $clr-primary-darkblue !important;
+      }
+    }
+  }
 }
