Change master display to block

--- a/src/ng2-datepicker/ng2-datepicker.component.sass
+++ b/src/ng2-datepicker/ng2-datepicker.component.sass
@@ -17,6 +17,7 @@ $red: #fa5252
   position: relative
 
   .datepicker-input-container
+    display: block
     background: transparent
 
     .datepicker-input
