Remove container-class

--- a/src/ng2-datepicker/ng2-datepicker.component.html
+++ b/src/ng2-datepicker/ng2-datepicker.component.html
@@ -1,4 +1,4 @@
-<div class="datepicker-container u-is-unselectable">
+<div class="u-is-unselectable">
   <div class="input-group">
     <input type="text" class="datepicker-input form-control" [ngModel]="date.formatted" (ngModelChange)="inputChange($event)">
     <span _ngcontent-c2="" class="input-group-addon" (click)="toggle()"><span _ngcontent-c2="" class="glyphicon glyphicon-calendar"></span></span>
