--- a/src/ng2-datepicker/ng2-datepicker.component.sass
+++ b/src/ng2-datepicker/ng2-datepicker.component.sass
@@ -163,6 +163,8 @@ $red: #fa5252
             color: #FFFFFF
           &.disabled
             pointer-events: none
+          &.today
+            background-color: #FFFFFF
 
       .datepicker-calendar-years-container
         width: 100%
