Change some colors

--- a/src/ng2-datepicker/ng2-datepicker.component.sass
+++ b/src/ng2-datepicker/ng2-datepicker.component.sass
@@ -160,7 +160,7 @@ $red: #fa5252
           &:hover:not(.disabled), &.selected
             border: 1px solid #366AAB
             border-radius: 4px
-            color: #FFFFFF
+            color: #FFFFFF !important
           &.disabled
             pointer-events: none
           &.today
@@ -176,14 +176,14 @@ $red: #fa5252
           align-items: center
           float: left
           font-size: 14px
-          color: #8E8E8E
+          color: #FFFFFF
           width: calc(100% / 4)
           height: 50px
           text-align: center
           border-radius: 50%
           cursor: pointer
           &:hover, &.selected
-            border: 1px solid #366AAB
+            border: 1px solid #333333
             border-radius: 4px
 
       .datepicker-buttons
