Change color of year-text in year selection to black

--- a/src/ng2-datepicker/ng2-datepicker.component.sass
+++ b/src/ng2-datepicker/ng2-datepicker.component.sass
@@ -176,7 +176,7 @@ $red: #fa5252
           align-items: center
           float: left
           font-size: 14px
-          color: #FFFFFF
+          color: #000
           width: calc(100% / 4)
           height: 50px
           text-align: center
