--- a/src/ng2-datepicker/ng2-datepicker.component.sass
+++ b/src/ng2-datepicker/ng2-datepicker.component.sass
@@ -158,7 +158,7 @@ $red: #fa5252
           border-radius: 50%
           cursor: pointer
           &:hover:not(.disabled), &.selected
-            border: 1px solid #366AAB
+            border: 1px solid #333333
             border-radius: 4px
             color: #FFFFFF !important
           &.disabled
@@ -202,7 +202,7 @@ $red: #fa5252
           cursor: pointer
           text-align: center
           padding: 5px 10px
-          border: 1px solid #366AAB
+          border: 1px solid #333333
           border-radius: 4px
 
   svg
