Try to fix multi language support

--- a/src/ng2-datepicker/ng2-datepicker.component.html
+++ b/src/ng2-datepicker/ng2-datepicker.component.html
@@ -36,11 +36,11 @@
         <div class="datepicker-calendar-day-names">
           <span>{{ options.mo }}</span>
           <span>{{ options.tu }}</span>
-          <span>{{ options.ww }}</span>
+          <span>{{ options.we }}</span>
           <span>{{ options.th }}</span>
           <span>{{ options.fr }}</span>
           <span>{{ options.sa }}</span>
-          <span>{{ options.so }}</span>
+          <span>{{ options.su }}</span>
         </div>
         <div class="datepicker-calendar-days-container">
           <span class="day" *ngFor="let d of days; let i = index"
